examples/invalid/program76.c
int main(void) {
    int value;
    int *pointer;
    value = 5;
    pointer = value;
    return *pointer;
}


